--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 		<java.version>1.8</java.version>
 		<oauth2-autoconfigure>2.1.0.RELEASE</oauth2-autoconfigure>
 		<swagger2.version>2.9.2</swagger2.version>
+		<postgresql.version>42.2.18</postgresql.version>
+		<jasypt>3.0.3</jasypt>
 	</properties>
 
 	<dependencies>
@@ -28,17 +30,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security.oauth.boot</groupId>
 			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
@@ -49,7 +51,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.2.18</version>
+			<version>${postgresql.version}</version>
 		</dependency>
 
 		<dependency>
@@ -63,6 +65,13 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>${swagger2.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>${jasypt}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
