--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,8 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
 		<oauth2-autoconfigure>2.1.0.RELEASE</oauth2-autoconfigure>
-		<swagger2.version>2.9.2</swagger2.version>
+		<spring-boot.version>2.2.5.RELEASE</spring-boot.version>
+		<springfox-boot-starter>3.0.0</springfox-boot-starter>
 		<postgresql.version>42.2.18</postgresql.version>
 	</properties>
 
@@ -37,6 +38,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+
+		<!-- security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
@@ -46,6 +53,13 @@
 			<version>${oauth2-autoconfigure}</version>
 		</dependency>
 
+		<!-- springfox -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>${springfox-boot-starter}</version>
+		</dependency>
+
 		<!-- postgresql -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -53,16 +67,11 @@
 			<version>${postgresql.version}</version>
 		</dependency>
 
+		<!-- lombok -->
 		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>${swagger2.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>${swagger2.version}</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 	</dependencies>
